# kakarot-rpc

./: Cargo.toml  docker-compose.yaml
.trunk/: trunk.yaml
core/src/client/: client_api.rs  mod.rs
core/src/utils/: wiremock_utils.rs
crates/core/: Cargo.toml
crates/core/src/contracts/: kakarot.rs
crates/core/src/models/: transaction.rs
crates/core/src/test_utils/: deploy_helpers.rs
crates/core/tests/: client.rs
crates/eth-rpc/: Cargo.toml
crates/scripts/: Cargo.toml
crates/scripts/src/: args.rs  constants.rs  kakarot.rs  main.rs
deployments/karnot/: deployment-config.yaml
docker/hive/: Dockerfile
docker/rpc/: Dockerfile
rpc/src/: eth_rpc.rs
rpc/tests/: rpc.rs
src/eth_provider/: error.rs  provider.rs
src/eth_rpc/: rpc.rs
src/eth_rpc/servers/: eth_rpc.rs  web3_rpc.rs
src/models/: block.rs  call.rs  event.rs  felt.rs  transaction_receipt.rs
src/models/transaction/: transaction.rs  transaction_signed.rs
src/starknet_client/: errors.rs  mod.rs
tests/: debug_api.rs
