[package]
name = "scripts"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }

[dependencies]
eyre = "0.6.8"
kakarot-rpc = { path = "../eth-rpc" }
kakarot-rpc-core = { path = "../core" }
log = "0.4.17"
url = "2.3.1"

# async
tokio = { version = "1.21.2", features = ["macros"] }

# misc
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
starknet = { workspace = true }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
clap = "4.3.17"
dotenv = { workspace = true }
lazy_static = { workspace = true }